syntax = "proto3";
option swift_prefix="SP";

import "Connectivity.proto";

message ClientInfo {
    string app_ver_code = 1;
    string cl_id = 2;
    Connectivity connectivity = 3;
}

message ShortClientInfo {
    string cl_id = 1;
    string device_id = 2;
}
