
syntax = "proto3";

import "SPConnectivity.proto";

message SPClientInfo {
    string appVerCode = 1;
    string clId = 2;
    SPConnectivity connectivity = 3;
}

message SPShortClientInfo {
    string clId = 1;
    string deviceId = 2;
}
